// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchGroupMembers should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Account",
        "Organization",
      ],
      "_key": "60259a2ad81e1a474d4e7c83",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "_id": "60259a2ad81e1a474d4e7c83",
            "created": "2021-02-11T20:57:14.837Z",
            "displayName": null,
            "id": "60259a2ad81e1a474d4e7c83",
            "logoUrl": null,
          },
        },
      ],
      "_type": "jumpcloud_account",
      "createdOn": 1613077034837,
      "displayName": "60259a2ad81e1a474d4e7c83",
      "id": "60259a2ad81e1a474d4e7c83",
      "logoUrl": undefined,
      "name": "60259a2ad81e1a474d4e7c83",
      "webLink": "https://console.jumpcloud.com",
    },
    {
      "_class": [
        "User",
      ],
      "_key": "6026bec6b8207255280d5981",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "_id": "6026bec6b8207255280d5981",
            "account_locked": false,
            "account_locked_date": null,
            "activated": false,
            "addresses": [],
            "allow_public_key": true,
            "attributes": [],
            "company": "",
            "costCenter": "",
            "created": "2021-02-12T17:45:42.369Z",
            "department": "",
            "description": "Testing desc",
            "disableDeviceMaxLoginAttempts": false,
            "displayname": "Austin K",
            "email": "austin.kelleher+testjc@jupiterone.com",
            "employeeIdentifier": null,
            "employeeType": "",
            "enable_managed_uid": false,
            "enable_user_portal_multifactor": false,
            "external_dn": "",
            "external_source_type": "",
            "externally_managed": false,
            "firstname": "Austin",
            "id": "6026bec6b8207255280d5981",
            "jobTitle": "",
            "lastname": "Kelleher",
            "ldap_binding_user": false,
            "location": "",
            "mfa": {
              "configured": false,
              "exclusion": false,
            },
            "middlename": "",
            "password_expired": false,
            "password_never_expires": false,
            "passwordless_sudo": false,
            "phoneNumbers": [],
            "samba_service_user": false,
            "ssh_keys": [],
            "sudo": false,
            "suspended": false,
            "systemUsername": "",
            "tags": [],
            "totp_enabled": false,
            "unix_guid": 5001,
            "unix_uid": 5001,
            "userTags": undefined,
            "username": "austinkellehertest",
          },
        },
      ],
      "_type": "jumpcloud_user",
      "active": false,
      "company": "",
      "createdOn": 1613151942369,
      "department": "",
      "description": "Testing desc",
      "displayName": "austinkellehertest",
      "email": "austin.kelleher+testjc@jupiterone.com",
      "employeeId": undefined,
      "employeeType": "",
      "externallyManaged": false,
      "firstName": "Austin",
      "id": "6026bec6b8207255280d5981",
      "jobTitle": "",
      "lastName": "Kelleher",
      "ldapBindingUser": false,
      "login": "austinkellehertest",
      "mfaConfigured": false,
      "mfaEnabled": false,
      "mfaExclusion": false,
      "mfaExclusionUntil": undefined,
      "name": "Austin Kelleher",
      "sambaServiceUser": false,
      "state": undefined,
      "sudo": false,
      "suspended": false,
      "username": "austinkellehertest",
      "webLink": "https://console.jumpcloud.com/#/users/6026bec6b8207255280d5981/details",
    },
    {
      "_class": [
        "Group",
      ],
      "_key": "60259a3cb544065d1eaf2760",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "attributes": null,
            "description": "",
            "email": "",
            "id": "60259a3cb544065d1eaf2760",
            "name": "All Users",
            "type": "user_group",
          },
        },
      ],
      "_type": "jumpcloud_group",
      "attributes": undefined,
      "createdOn": undefined,
      "description": "",
      "displayName": "All Users",
      "id": "60259a3cb544065d1eaf2760",
      "name": "All Users",
      "webLink": "https://console.jumpcloud.com/#/groups/user/60259a3cb544065d1eaf2760/details",
    },
    {
      "_class": [
        "Group",
      ],
      "_key": "6026da081f24755306c2ee0d",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "attributes": null,
            "description": "Testing!",
            "email": "",
            "id": "6026da081f24755306c2ee0d",
            "name": "My Test Group",
            "type": "user_group",
          },
        },
      ],
      "_type": "jumpcloud_group",
      "attributes": undefined,
      "createdOn": undefined,
      "description": "Testing!",
      "displayName": "My Test Group",
      "id": "6026da081f24755306c2ee0d",
      "name": "My Test Group",
      "webLink": "https://console.jumpcloud.com/#/groups/user/6026da081f24755306c2ee0d/details",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|6026bec6b8207255280d5981",
      "_toEntityKey": "6026bec6b8207255280d5981",
      "_type": "jumpcloud_account_has_user",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|60259a3cb544065d1eaf2760",
      "_toEntityKey": "60259a3cb544065d1eaf2760",
      "_type": "jumpcloud_account_has_group",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|6026da081f24755306c2ee0d",
      "_toEntityKey": "6026da081f24755306c2ee0d",
      "_type": "jumpcloud_account_has_group",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "jumpcloud_account",
    "jumpcloud_user",
    "jumpcloud_account_has_user",
    "jumpcloud_group",
    "jumpcloud_account_has_group",
  ],
  "numCollectedEntities": 4,
  "numCollectedRelationships": 3,
}
`;

exports[`#fetchGroups should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Account",
        "Organization",
      ],
      "_key": "60259a2ad81e1a474d4e7c83",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "_id": "60259a2ad81e1a474d4e7c83",
            "created": "2021-02-11T20:57:14.837Z",
            "displayName": null,
            "id": "60259a2ad81e1a474d4e7c83",
            "logoUrl": null,
          },
        },
      ],
      "_type": "jumpcloud_account",
      "createdOn": 1613077034837,
      "displayName": "60259a2ad81e1a474d4e7c83",
      "id": "60259a2ad81e1a474d4e7c83",
      "logoUrl": undefined,
      "name": "60259a2ad81e1a474d4e7c83",
      "webLink": "https://console.jumpcloud.com",
    },
    {
      "_class": [
        "Group",
      ],
      "_key": "60259a3cb544065d1eaf2760",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "attributes": null,
            "description": "",
            "email": "",
            "id": "60259a3cb544065d1eaf2760",
            "name": "All Users",
            "type": "user_group",
          },
        },
      ],
      "_type": "jumpcloud_group",
      "attributes": undefined,
      "createdOn": undefined,
      "description": "",
      "displayName": "All Users",
      "id": "60259a3cb544065d1eaf2760",
      "name": "All Users",
      "webLink": "https://console.jumpcloud.com/#/groups/user/60259a3cb544065d1eaf2760/details",
    },
    {
      "_class": [
        "Group",
      ],
      "_key": "6026da081f24755306c2ee0d",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "attributes": null,
            "description": "Testing!",
            "email": "",
            "id": "6026da081f24755306c2ee0d",
            "name": "My Test Group",
            "type": "user_group",
          },
        },
      ],
      "_type": "jumpcloud_group",
      "attributes": undefined,
      "createdOn": undefined,
      "description": "Testing!",
      "displayName": "My Test Group",
      "id": "6026da081f24755306c2ee0d",
      "name": "My Test Group",
      "webLink": "https://console.jumpcloud.com/#/groups/user/6026da081f24755306c2ee0d/details",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|60259a3cb544065d1eaf2760",
      "_toEntityKey": "60259a3cb544065d1eaf2760",
      "_type": "jumpcloud_account_has_group",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "60259a2ad81e1a474d4e7c83",
      "_key": "60259a2ad81e1a474d4e7c83|has|6026da081f24755306c2ee0d",
      "_toEntityKey": "6026da081f24755306c2ee0d",
      "_type": "jumpcloud_account_has_group",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "jumpcloud_account",
    "jumpcloud_group",
    "jumpcloud_account_has_group",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;
